# Collision-Detection

./: Disc Rectangle Intersection.docx  README.md
Disc Collider/: CMakeLists.txt  Main.cpp  README.txt
Disc Collider/make/MSVS 2010/: Disc Collider.sln  Disc Collider.vcxproj
Disc Collider/make/MSVS 2010/props/OpenGLTrainer/.svn/: wc.db
Disc Collider/make/cmake/: CMakeLists.txt
OpenGLTrainer/: README.html
OpenGLTrainer/Documentation/: Doxyfile  OpenGLTrainer Compilation.html  OpenGLTrainer_MainPage.txt
OpenGLTrainer/Documentation/html/: _framebuffer_8h-source.html  _framebuffer_8h_source.html  _open_g_l_trainer_8h-source.html  _open_g_l_trainer_8h_source.html  _pan_zoom_window_8h_source.html  _window.html  _zoom_window_8h-source.html  _zoom_window_8h_source.html  _zoom_window__page.html  annotated.html  bug.html  class_i_t_c_s4120_1_1_open_g_l_trainer_1_1_framebuffer-members.html  class_i_t_c_s4120_1_1_open_g_l_trainer_1_1_framebuffer.html  class_i_t_c_s4120_1_1_open_g_l_trainer_1_1_pan_zoom_window-members.html  class_i_t_c_s4120_1_1_open_g_l_trainer_1_1_pan_zoom_window.html  class_i_t_c_s4120_1_1_open_g_l_trainer_1_1_window-members.html  class_i_t_c_s4120_1_1_open_g_l_trainer_1_1_window.html  class_i_t_c_s4120_1_1_open_g_l_trainer_1_1_zoom_window-members.html  class_i_t_c_s4120_1_1_open_g_l_trainer_1_1_zoom_window.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  namespace_i_t_c_s4120.html  namespace_i_t_c_s4120_1_1_open_g_l_trainer.html  namespace_i_t_c_s4120_1_1_open_g_l_trainer_1_1_take4.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  pages.html  struct_i_t_c_s4120_1_1_open_g_l_trainer_1_1_experiment_control-members.html  struct_i_t_c_s4120_1_1_open_g_l_trainer_1_1_experiment_control.html  struct_i_t_c_s4120_1_1_open_g_l_trainer_1_1_pan_zoom_window_1_1_view_window-members.html  (+4 more)
OpenGLTrainer/Source/: CMakeLists.txt  Framebuffer.cpp  OpenGLTrainer.cpp  PanZoomWindow.cpp  ZoomWindow.cpp
OpenGLTrainer/Source/Experimental/: Framebuffer1.cpp  Framebuffer2.cpp  Framebuffer3.cpp  Testing.cpp
OpenGLTrainer/Tools and Examples/Cube Skeleton I/: CMakeLists.txt  Cube.cpp  Cube.h  Main.cpp
OpenGLTrainer/Tools and Examples/Cube Skeleton I/make/MSVS 10/: Cube Skeleton I.sln  Cube Skeleton I.vcxproj  Cube Skeleton I.vcxproj.filters
OpenGLTrainer/Tools and Examples/Cube Skeleton I/make/MSVS 10/props/OpenGLTrainer/.svn/: wc.db
OpenGLTrainer/Tools and Examples/Cube Skeleton I/make/MSVS 90/: Cube Skeleton I.sln  Cube Skeleton I.vcproj
OpenGLTrainer/Tools and Examples/Framebuffer/: CMakeLists.txt  Main.cpp  README.htm
OpenGLTrainer/Tools and Examples/Framebuffer/make/MSVS 10/: Framebuffer.sln  Framebuffer.vcxproj  Framebuffer.vcxproj.filters
OpenGLTrainer/Tools and Examples/Framebuffer/make/MSVS 10/props/OpenGLTrainer/: OPENGLTRAINER_DIR-copyme.props  OpenGLTrainer - Debug.props
OpenGLTrainer/Tools and Examples/Framebuffer/make/MSVS 10/props/OpenGLTrainer/.svn/: wc.db
OpenGLTrainer/Tools and Examples/Framebuffer/make/VS08/: Framebuffer.sln  Framebuffer.vcproj
OpenGLTrainer/Tools and Examples/Framebuffer/make/VS09/: Framebuffer.sln  Framebuffer.vcproj  Framebuffer.vsprops  ITCS4120.vssettings  OpenGLTrainer.vsprops
OpenGLTrainer/Tools and Examples/Framebuffer/make/cmake/: CMakeLists.txt
OpenGLTrainer/Tools and Examples/OpenGL and GLUT - 101/: Main.cpp  README.html
OpenGLTrainer/Tools and Examples/OpenGL and GLUT - 101/make/MSVS 10/: OpenGL and GLUT - 101.sln  OpenGL and GLUT - 101.vcxproj  OpenGL and GLUT - 101.vcxproj.filters
OpenGLTrainer/Tools and Examples/OpenGL and GLUT - 101/make/MSVS 10/props/OpenGLTrainer/.svn/: wc.db
OpenGLTrainer/Tools and Examples/OpenGL and GLUT - 101/make/MSVS 90/: OpenGL and GLUT - 101.sln  OpenGL and GLUT - 101.vcproj
OpenGLTrainer/Tools and Examples/PanZoomWindow/: CMakeLists.txt  Main.cpp  README.txt
OpenGLTrainer/Tools and Examples/PanZoomWindow/make/MSVS 10/: PanZoomWindow.sln  PanZoomWindow.vcxproj  PanZoomWindow.vcxproj.filters
OpenGLTrainer/Tools and Examples/PanZoomWindow/make/MSVS 10/props/OpenGLTrainer/.svn/: wc.db
OpenGLTrainer/Tools and Examples/ZoomWindow/: CMakeLists.txt  Main.cpp  README.htm
OpenGLTrainer/Tools and Examples/ZoomWindow/make/MSVS 10/: ZoomWindow.sln  ZoomWindow.vcxproj  ZoomWindow.vcxproj.filters
OpenGLTrainer/Tools and Examples/ZoomWindow/make/MSVS 10/props/OpenGLTrainer/: OpenGLTrainer.props
OpenGLTrainer/Tools and Examples/ZoomWindow/make/MSVS 10/props/OpenGLTrainer/.svn/: wc.db
OpenGLTrainer/Tools and Examples/ZoomWindow/make/VS08/: ZoomWindow.sln  ZoomWindow.vcproj
OpenGLTrainer/include/OpenGLTrainer/: Framebuffer.h  Framebuffer1.h  Framebuffer2.h  Framebuffer3.h  Image.h  OpenGLTrainer.h  OpenGLTrainer_exports.h  PanZoomWindow.h  ZoomWindow.h
OpenGLTrainer/include/OpenGLTrainer/Experimental/: DONT LOOK AT THESE FILES.txt
OpenGLTrainer/make/MSVS 10/: OpenGLTrainer.sln  OpenGLTrainer.vcxproj
OpenGLTrainer/make/MSVS 10/props/: OPENGLTRAINER_DIR-copyme.props  OpenGLTrainer - Debug.props  OpenGLTrainer.props
OpenGLTrainer/make/MSVS 90/: OpenGLTrainer.sln  OpenGLTrainer.vcproj
OpenGLTrainer/make/cmake/: CMakeLists.txt  zjw library.cmake
